# courses-code

crafting_interpreters/clox/: CMakeLists.txt  build_run.ps1
crafting_interpreters/clox/include/: chunk.h  common.h  compiler.h  memory.h  object.h  scanner.h  table.h  utils.h  value.h  vm.h
crafting_interpreters/clox/src/: CMakeLists.txt  chunk.c  chunk.h  compiler.c  debug.c  main.c  memory.c  memory.h  object.c  scanner.c  table.c  utils.c  value.c  vm.c
crafting_interpreters/jlox/lox/: .gitignore  README.md
crafting_interpreters/part_1/doubly_linked_list/: doubly_linked_list.c
crafting_interpreters/part_1/vanilla_java/: Salute.java  Utils.java
eth/inbox/: compile.js  deploy.js  package-lock.json  package.json
eth/inbox/test/: Inbox.test.js
eth/kickstart/: package-lock.json  package.json
eth/kickstart/ethereum/: campaign.js  compile.js  deploy.js  factory.js  web3.js
eth/kickstart/test/: campaing.test.js
eth/lottery/: deploy.js  package-lock.json  package.json
eth/lottery-react/: package-lock.json  package.json
eth/lottery-react/src/: App.js  lottery.js
eth/lottery/test/: Lottery.test.js
microservices_node/blog/: skaffold.yaml
microservices_node/blog/client/: package-lock.json
microservices_node/blog/comments/: index.js  package-lock.json  package.json
microservices_node/blog/event-bus/: index.js  package-lock.json  package.json
microservices_node/blog/moderation/: index.js  package-lock.json  package.json
microservices_node/blog/posts/: index.js  package-lock.json  (+1 more)
microservices_node/ticketing/: package-lock.json  skaffold.yaml
(+129 files in other folders)
